# stdlib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md  run  run.ps1  setup  setup.ps1  test1.cc  xx.md
.toolchain/: dfsan-ignorelist.txt  toolchain.win64-debug.cmake  toolchain.win64.cmake  toolchain.x64-linux.cmake
docs/: String.md  Union.md  core.md
docs/core/: union.md
include/Commons/: core.hh  system.hh
include/Commons/Resources/: crc32_castagnoli_table.csv
include/Commons/__core/: arrayref.hh  assert.hh  atomic.hh  base_definitions.hh  box.hh  charset.hh  class.hh  comparable.hh  data_integrity.hh  defer.hh  errors.hh  function.hh  hash.hh  initializer_list.hh  intbase.hh  math_float.hh  math_int.hh  pointer.hh  profiler.hh  reflection_function.hh  reflection_type.hh  result.hh  rng.hh  tuple.hh  union.hh
include/Commons/__core/hashers/: crc32_hasher.hh
include/Commons/__system/: Stream.hh
include/Commons/algorithm/: Tokenizer.hh  Tokenizer.inl  search.hh
include/Commons/algorithm/parser/: Alphabet.hh  Token.hh
include/Commons/datastructs/: Array.hh  ArrayBasis.hh  ArrayBuffer.hh  ArrayIterator.hh  ArrayUtil.hh  ByteVector.hh  Collection.hh  LinkedList.hh  Range.hh  ResizableArray.hh  SparseArray.hh  Split.hh  linkedfwiter.hh  string.hh  variant.hh
include/Commons/gc/: GC.hh  GCManaged.hh  GCTrace.hh
include/Commons/graphics/: Color.hh
include/commons/: core.hh  datastructs.hh  everything-linux.hh  godbolt.hh  startup.hh  system.hh
include/commons/algorithm/: Tokenizer.hh  predicates.hh  search.hh
include/commons/algorithm/parser/: Alphabet.hh  Token.hh
include/commons/core/: array_iterator.hh  arrayref.hh  assert.hh  atomic.hh  base_definitions.hh  box.hh  charset.hh  class.hh  comparable.hh  cstring.hh  defer.hh  errors.hh  function.hh  generator.hh  hash.hh  index.hh  initializer_list.hh  intbase.hh  iterable.hh  math_double.hh  math_float.hh  math_int.hh  optional.hh  pointer.hh  predicates.hh  printable.hh  profiler.hh  property.hh  range.hh  reflection_function.hh  reflection_type.hh  result.hh  rng.hh  search.hh  string_ref.hh  tuple.hh  union.hh
include/commons/core/hashers/: crc32_hasher.hh
include/commons/datastructs/: Array.hh  ArrayBasis.hh  ArrayBuffer.hh  ArrayIterator.hh  ArrayUtil.hh  ByteVector.hh  LinkedList.hh  ResizableArray.hh  SparseArray.hh  array.hh  array_iterator.hh  array_list.hh  array_util.hh  collection.hh  fixed_map.hh  fixed_stack.hh  linked_iterator.hh  linked_list.hh  map.hh  queue.hh  range.hh  sparse_array.hh  split.hh  stack.hh  string.hh  variant.hh
include/commons/graphics/: Color.hh
include/commons/resources/: OneCharStringTable.hh  crc32_castagnoli_table.csv  one_char_string_table.hh
include/commons/system/: fileoutstream.inl  listdir.inl  outstream.inl  shell.inl  stream.hh  streamstatus.inl  stringstream.inl  syscall_linux.inl  syscall_linux_x64.inl  win32lite.hh
include/commons/system/linux/: linuxapi.inl  linuxdirlist.inl  linuxfileout.inl  linuxruntime.inl  linuxshell.inl  linuxstdout.inl  linuxsyscall.inl
include/commons/system/windows/: WinHeap.cc  WinMain-Freestanding.cc  WinPanic.cc  WinStandardStreams.cc  WinStandardStreams.hh  WindowsNT.hh
src/algorithm/: parser_alphabet.cc  parser_tokenizer.cc
src/core/: core_assert.cc  core_cstring.cc  core_memory.cc  core_newdelete.cc  core_profiler.cc  core_random.cc  core_stream.cc
src/datastructs/: ds_array.cc  ds_bytevector.cc  ds_llist.cc  ds_sparsearray.cc  ds_string.cc
src/dynamic/: Object.cc  variant.cc
src/gc/: GC.cc  GCAllocation.cc  GCPhaseGen0.cc  GCTrace.cc  PointerTracking.cc
src/resources/: OneCharStringTable.hh
src/system/: hardware_float32.cc
src/system/linux/: LinuxPanic.cc  LinuxShell.cc  LinuxShell.hh  LinuxStandardStreams.cc  LinuxStandardStreams.hh  linux_runtime.cc  linux_shell.cc  linux_streams.cc  linux_streams.hh
src/system/windows/: Win32Error.hh  WinChkstk.cc  WinHeap.cc  WinMain-Freestanding.cc  WinMain-Hosted.cc  WinPanic.cc  WinStandardStreams.cc  WinStandardStreams.hh  WindowsNT.hh
test/: blank.cc  main.cc  recursion_stress.inl  test_tokenizer.cc  testoptional.cc
